  * patches/999_config.diff: Refurbish.  Now builds linprocfs/linux into
    the kernel (since it's always used), and removes a bunch of non-
    essential stuff (use kfreebsd-common to load them as modules).
    Network and storage drivers _are_ still present (untill we port
    hotplug/discover).  On -486, this saves 544 KB in kernel.gz.

 -- Robert Millan <rmh@aybabtu.com>  Wed, 26 Apr 2006 20:56:45 +0200

kfreebsd-6 (6.0-0.2) unreleased; urgency=low

  * First "normal" upload to unreleased.

 -- Robert Millan <rmh@aybabtu.com>  Wed, 26 Apr 2006 14:55:28 +0200

kfreebsd-6 (6.0-0.1) unreleased; urgency=low

  [ Robert Edmonds ]
  * New upstream version pulled from RELENG_6 CVSup.
    - ReiserFS support.  (Closes: #335019)
  * Disabled the non-compiling hwpmc driver.

  [ Robert Millan ]
  * Merge 5.x branch changes (from rev 654 to rev 1058)
  * Add src/usr.sbin/config into the source and build/use it dynamicaly.
  * Fix IEEE 802.11 buffer overflow (FreeBSD-SA-06:05.80211 / CVE-2006-0226).
  * Fix local kernel memory disclosure (FreeBSD-SA-06:06.kmem / CVE-2006-0379
    / CVE-2006-0380).
  * Fix IP fragment handling panic in pf (FreeBSD-SA-06:07.pf / CVE-2006-0381).
  * Disable "nve" driver.
    - copyright: Add nve to list of non-free components.
    - patches/903_disable_non-free_drivers.diff: Disable nve.
    - arch/i386/486.config: Ditto.
  * control.in:
    - (Build-Depends-Indep): Remove patchutils and sharutils (not really
    needed).
    - (Build-Depends): Ditto.  Also update libdb4.4-dev.
    - (Replaces): Remove kfreebsd@major@-source (it never existed for 6.x).
  * rules: When obtaining major/version numbers, if this is a preliminar
    snapshot (e.g. 6.99+20060217), pretend this is the actual release.
  * autopatch.sh: Merge into rules.  This allows us to use $(major) instead
    of a hardcoded number.
  * patches/001_misc.diff: Make this patch more upstream-friendly.
  * Fix /dev permissions in userland.