@@ -1,1 +1,0 @@
-/boot/device.hints
