@@ -1,4 +1,3 @@
 shlib-with-non-pic-code
 shared-lib-without-dependency-information
-non-etc-file-marked-as-conffile /boot/device.hints
 
