@@ -49,7 +49,7 @@ clean:
 	dh_testdir
 	dh_testroot
 	rm -rf src kfreebsd-source-* flavor-* config
-	rm -f debian/kfreebsd-image-*.{conffiles,preinst,postinst}
+	rm -f debian/kfreebsd-image-*.{preinst,postinst}
 
 	rm -f *-stamp
 	dh_clean
@@ -139,11 +139,7 @@ install-flavor-%-stamp: install-common-stamp build-flavor-%-stamp
 	dh_testdir
 	dh_testroot
 
-	# install device.hints
 	mkdir -p $(IMAGE_PACKAGE)-$*/boot/kernel
-	install -o root -g root -m 644 \
-		$(FLAVOR_DIR)-$*/sys/$(cpu)/conf/GENERIC.hints \
-		$(IMAGE_PACKAGE)-$*/boot/device.hints
 
 	# make the install target happy
 	install -o root -g root -m 644 \
@@ -175,8 +171,6 @@ install-flavor-%-stamp: install-common-stamp build-flavor-%-stamp
 		$(NDIS_PACKAGE)-$*/boot/kernel/
 
 	# scripts
-	cp -f debian/kfreebsd-image.conffiles.in \
-		debian/kfreebsd-image-$(version)-$(abiname)-$*.conffiles
 	cp -f debian/kfreebsd-image.postinst.in \
 		debian/kfreebsd-image-$(version)-$(abiname)-$*.postinst
 	cp -f debian/kfreebsd-image.preinst.in \
