@@ -6,8 +6,9 @@ kfreebsd-6 (6.0-0.3) UNRELEASED; urgency=low
     essential stuff (use kfreebsd-common to load them as modules).
     Network and storage drivers _are_ still present (untill we port
     hotplug/discover).  On -486, this saves 544 KB in kernel.gz.
+  * Get rid of /boot/device.hints (now embedded in kernel image).
 
- -- Robert Millan <rmh@aybabtu.com>  Wed, 26 Apr 2006 20:56:45 +0200
+ -- Robert Millan <rmh@aybabtu.com>  Wed, 26 Apr 2006 22:21:26 +0200
 
 kfreebsd-6 (6.0-0.2) unreleased; urgency=low
 
